--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="section-two-wrapper">
 
             <div class="container">
-                <div class="card text-bg-dark">
+                <div class="card text">
                     <img src="assets/imgs/section 1.webp" class="card-img" alt="...">
                     <div class="card-img-overlay">
                       <h5 class="S2-card-title">Outlook for iOS and Android</h5>
